# pandora

./: .gitignore  Cargo.toml  PKGBUILD  README.md  pandora.kdl
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: ipc.rs  main.rs  pandora.rs  render.rs  wl_session.rs
daemon/src/agents/: mod.rs  niri.rs  outputs.rs
pithos/: Cargo.toml
pithos/src/: commands.rs  config.rs  error.rs  lib.rs  misc.rs  misc_helpers.rs  sockets.rs
pithos/src/agents/: niri.rs  outputs.rs
pithos/src/wayland/: mod.rs  render_helpers.rs
pithos/src/wayland/agents/: mod.rs  niri.rs  outputs.rs
sample files/: pandora.kdl  pandora.service
src/: _cli.rs  cli.rs  commands.rs  config.rs  ipc.rs  lib.rs  main.rs  pandora.rs  render.rs
src/agents/: niri.rs  outputs.rs
src/anims/: spring.rs
src/pithos/: commands.rs  config.rs  error.rs  misc.rs  mod.rs  sockets.rs
src/threads/: config.rs  ipc.rs  lockscreen.rs  logger.rs  mod.rs  niri.rs  outputs.rs  render.rs
src/wayland/: mod.rs  render_helpers.rs
tmp_agent_dev/: Cargo.toml
tmp_agent_dev/src/: main.rs
