[package]
name = "pandora"
version = "0.0.1"
edition = "2024"


[dependencies]
pithos = { path = "../pithos" }
bytemuck = "1.23.1"
image = "0.25.6"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
wayrs-client = "1.3.1"
wayrs-protocols = { version = "0.14", features = ["wlr-layer-shell-unstable-v1", "linux-dmabuf-v1", "viewporter"] }
wayrs-utils = { version = "0.17" }
niri-ipc = "25.5.1"
