[package]
name = "pithos"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
bytemuck = "1.23.1"
image = "0.25.6"
niri-ipc = "=25.5.1"
wayrs-client = "1.3.1"
wayrs-protocols = { version = "0.14", features = ["wlr-layer-shell-unstable-v1", "linux-dmabuf-v1", "viewporter"] }
